    TODO: Update Status Item screenshot
    TODO: Add Example that uses JS interpreter w. args & print
    TODO: Remove all references to System Profiler example
    TODO: New windows in Platypus-generated apps should be centered, intelligently positioned on first launch (should remember placement between launches)
    TODO: Disabled menu item syntax for status menus
    TODO: Create new document icons
    * New application icons
    * Removed XML plist feature
    * Documentation overhauled and partially rewritten for clarity
    * Added Open With menu for items in bundled files list
    * Validate default bundle identifier in Prefs
    * Make Droplet window & others larger
    * ScriptExec tries to make bundled script executable (+x) on launch (This may resolve issues with launching apps stored on network-mounted volumes)
    * Fixed buggy UTI validation in command line tool
    * Updated to support Mojave Dark Mode
    * Fixed issue with 16x16 document icons on non-retina displays
    * Added AWK and JavaScript interpreter presets
    * Fixed exception when double-clicking bundled files header
    * Fixed bug where pressing "Clear" could cause program to crash
    * Implemented a REFRESH command to clear text output buffer and reset web view HTML
    * Moved documentation to Markdown format from HTML
    * Fixed issue where command line status in Prefs window failed to update after pressing install or uninstall
    * Various minor interface improvements

5.2
    * Platypus apps can now register as URL scheme handlers and receive opened URLs as arguments to script
    * Platypus apps can now accept dragged URLs
    * Platypus apps that accept dropped files now have an Open Recent menu
    * New syntax to create submenus in Status Menu interface type
    * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.