@@ -350,7 +350,7 @@ pre code, pre tt {
 <h3 id="system-requirements">System Requirements</h3>
 <p>Both Platypus and the applications it generates require <strong>macOS 10.8</strong> or later and are provided as <strong>64-bit Intel</strong> binaries. If you want to target 10.6 and/or 32-bit systems, <a href="http://sveinbjorn.org/files/software/platypus/platypus4.9.zip">version 4.9</a> continues to work just fine. If you want to target 10.4 and the PowerPC users of yore, you can use version <a href="http://sveinbjorn.org/files/software/platypus/platypus4.4.zip">4.4</a>.</p>
 <h3 id="credits">Credits</h3>
-<p>Platypus was conceived and created by me, <a href="mailto:sveinbjorn@sveinbjorn.org">Sveinbjorn Thordarson</a>. The Platypus application icon – <a href="http://www.hexley.com/">Hexley</a>, the Darwin mascot – was created by Jon Hooper, who was kind enough to grant me permission to use it.</p>
+<p>Platypus was conceived and created by me, <a href="mailto:sveinbjorn@sveinbjorn.org">Sveinbjorn Thordarson</a>. The Platypus application icon was created by <a href="http://drifaliftora.is">Drífa Líftóra</a>.</p>
 <p>Thanks go to Troy Stephens, the original author of the <a href="http://iconfamily.sourceforge.net/">IconFamily</a> class used for icon handling in Platypus, Bryan D K Jones, author of <a href="https://github.com/bdkjones/VDKQueue">VDKQueue</a>, Gianni Ceccarelli for contributing code on authenticated script execution, Matt Gallagher for secure temp file code, and Andy Matuschak for the <a href="http://sparkle-project.org">Sparkle</a> update framework. <a href="http://stackoverflow.com">Stack Overflow</a> and the <a href="https://www.omnigroup.com">OmniGroup</a> Mac development mailing list and have also been invaluable over the years.</p>
 <p>Finally, I am much indebted to <a href="http://www.wsanchez.net">Wilfredo Sanchez</a>, author of <a href="http://www.wsanchez.net/software">DropScript</a>, the proof-of-concept project which inspired me to create Platypus in the first place.</p>
 <h2 id="the-basics">The Basics</h2>
