@@ -32,8 +32,10 @@ For 5.3
     TODO: Remove all references to System Profiler example
     TODO: New windows in Platypus-generated apps should be centered, intelligently positioned on first launch (should remember placement between launches)
     TODO: Disabled menu item syntax for status menus
-    TODO: Create new document icons
-    * New application icons
+    TODO: Change build script to not put app in directory before zipping
+
+    * First facelift in a decade: All new application icons
+    * Platypus and its command line tool binary are now code-signed. Generated applications remain unsigned, for obvious reasons.
     * Removed XML plist feature
     * Documentation overhauled and partially rewritten for clarity
     * Added Open With menu for items in bundled files list
